fix query in user repo and add authentication authorization in user api
